--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
 #topbar {
     height: 100px;
     background-color: rgba(0, 0, 0, 0.866);
+    margin-bottom: 20px;
 }
 
 #wrapper main {
@@ -67,7 +68,7 @@ a {
     color: lightgray;
 }
 
-nav h2 {
+nav h3 {
     margin-top: 20px;
 }
 
@@ -84,12 +85,64 @@ nav p img {
     background-color: lightgray;
 }
 
+main ul {
+    width: 60%;
+    display: flex;
+    color: lightgrey;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+h2 {
+    color: white;
+    font-weight: bold;
+    margin: 20px;
+    margin-left: 10px;
+}
+
+.first-row {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: space-around;
+    background-color: blue;
+}
+
+.card {
+    width: 200px;
+    height: 220px;
+    text-align: center;
+    color: lightgray;
+    margin-left: 0;
+}
+
+.card img {
+    height: 180px;
+}
+
+main h3 {
+    font-size: medium;
+}
+
+.other-rows {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: flex-start;
+    background-color: blue;
+}
+
 
 /* player/controller */
 
 #player {
     height: 100px;
+    display: flex;
     background-color: rgba(0, 0, 0, 0.842);
+}
+
+footer img {
+    width: 40px;
 }
 
 
